test/corpus/invalid.txt
==============================
Test 1
==============================

---
(ERROR)

==============================
Test 2
==============================
1
---
(ERROR
  (major))

==============================
Test 3
==============================
1.2
---
(ERROR
  (major)
  (minor))

==============================
Test 4
==============================
1.2.3-0123
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release)
  (ERROR))

==============================
Test 5
==============================
1.2.3-0123.0123
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release
    (ERROR))
  (ERROR))

==============================
Test 6
==============================
1.1.2+.123
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (ERROR))

==============================
Test 7
==============================
+invalid
---
(ERROR
  (UNEXPECTED 'i'))

==============================
Test 8
==============================
-invalid
---
(ERROR
  (UNEXPECTED 'i'))

==============================
Test 9
==============================
-invalid+invalid
---
(ERROR
  (UNEXPECTED 'i')
  (UNEXPECTED 'i'))

==============================
Test 10
==============================
-invalid.01
---
(ERROR
  (ERROR
    (UNEXPECTED 'i'))
  (major))

==============================
Test 11
==============================
alpha
---
(ERROR
  (UNEXPECTED 'a'))

==============================
Test 12
==============================
alpha.beta
---
(ERROR
  (UNEXPECTED 'a')
  (UNEXPECTED 'b'))

==============================
Test 13
==============================
alpha.beta.1
---
(ERROR
  (ERROR
    (UNEXPECTED 'a')
    (UNEXPECTED 'b'))
  (major))

==============================
Test 14
==============================
alpha.1
---
(ERROR
  (ERROR
    (UNEXPECTED 'a'))
  (major))

==============================
Test 15
==============================
alpha+beta
---
(ERROR
  (UNEXPECTED 'a')
  (UNEXPECTED 'b'))

==============================
Test 16
==============================
alpha_beta
---
(ERROR
  (UNEXPECTED 'a'))

==============================
Test 17
==============================
alpha.
---
(ERROR
  (UNEXPECTED 'a'))

==============================
Test 18
==============================
alpha..
---
(ERROR
  (UNEXPECTED 'a'))

==============================
Test 19
==============================
beta
---
(ERROR
  (UNEXPECTED 'b'))

==============================
Test 20
==============================
1.0.0-alpha_beta
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release)
  (ERROR
    (UNEXPECTED '_')))

==============================
Test 21
==============================
-alpha.
---
(ERROR
  (UNEXPECTED 'a'))

==============================
Test 22
==============================
1.0.0-alpha..
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release)
  (ERROR))

==============================
Test 23
==============================
1.0.0-alpha..1
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release
    (ERROR)))

==============================
Test 24
==============================
1.0.0-alpha...1
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release
    (ERROR)))

==============================
Test 25
==============================
1.0.0-alpha....1
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release
    (ERROR)))

==============================
Test 26
==============================
1.0.0-alpha.....1
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release
    (ERROR)))

==============================
Test 27
==============================
1.0.0-alpha......1
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release
    (ERROR)))

==============================
Test 28
==============================
1.0.0-alpha.......1
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release
    (ERROR)))

==============================
Test 29
==============================
01.1.1
---
(semver
  (core
    (major)
    (ERROR)
    (minor)
    (patch)))

==============================
Test 30
==============================
1.01.1
---
(semver
  (core
    (major)
    (minor)
    (ERROR)
    (patch)))

==============================
Test 31
==============================
1.1.01
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (ERROR))

==============================
Test 32
==============================
1.2
---
(ERROR
  (major)
  (minor))

==============================
Test 33
==============================
1.2.3.DEV
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (ERROR
    (UNEXPECTED 'D')))

==============================
Test 34
==============================
1.2-SNAPSHOT
---
(ERROR
  (major)
  (minor)
  (UNEXPECTED 'S'))

==============================
Test 35
==============================
1.2.31.2.3----RC-SNAPSHOT.12.09.1--..12+788
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (ERROR)
  (pre_release
    (ERROR)
    (MISSING _pre_release_identifier))
  (build))

==============================
Test 36
==============================
1.2-RC-SNAPSHOT
---
(ERROR
  (major)
  (minor)
  (UNEXPECTED 'R')
  (UNEXPECTED 'S'))

==============================
Test 37
==============================
-1.0.3-gamma+b7718
---
(semver
  (ERROR)
  (core
    (major)
    (minor)
    (patch))
  (pre_release)
  (build))

==============================
Test 38
==============================
+justmeta
---
(ERROR
  (UNEXPECTED 'j'))

==============================
Test 39
==============================
9.8.7+meta+meta
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (ERROR)
  (build))

==============================
Test 40
==============================
9.8.7-whatever+meta+meta
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release)
  (ERROR)
  (build))

==============================
Test 41
==============================
99999999999999999999999.999999999999999999.99999999999999999----RC-SNAPSHOT.12.09.1--------------------------------..12
---
(semver
  (core
    (major)
    (minor)
    (patch))
  (pre_release
    (ERROR)
    (MISSING _pre_release_identifier)))
